package rpgboss.message;

option java_outer_classname = "ModelSerialization";

message TilesetMetadata {
  required int32 xTiles = 1;
  required int32 yTiles = 2;
}

message TilesetSerial {
  required string partialPath = 1;
  required TilesetMetadata metadata = 2;
  optional bytes pngData = 3;
}

message ProjectSerial {
  required string gameTitle = 1;
}

message MapSerial {
  required int32 id = 1; // goes from 1 up
  required int32 parent = 2; // -1 or no id
  required string name = 3;
  
  required int32 xSize = 4; // 20 to 500
  required int32 ySize = 5; // 15 to 500
  
  repeated string tilesets = 6;
  
  optional bytes botLayer = 7;
  optional bytes midLayer = 8;
  optional bytes topLayer = 9;
  
  
}
